--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML> 
          <HEAD> 
-            <title>Google</title>
+            <title>Google 2</title>
             <link rel="icon" type="image/x-icon" href="logo-g.png">
          </HEAD>
          <body>
