--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <a href="c:\Users\ALUNOTI\Desktop\walker\index1.html">FORMATAÇÃO TEXTUAL</a>
 
  <p>             
-<a HREF="c:\Users\ALUNOTI\Desktop\walker\index2.html">CRIAÇÃO DE TABELAS</a>
+<a HREF="c:\Users\ALUNOTI\Desktop\walker\index2.html">CRIAR TABELAS</a>
 </p>
               
 <p>
