--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <HTML>
 
+
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background-image: url('1.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
+</head>
+
 <h1>EXERCICIO DE HTML</h1>
 
 <a href="CRIAR-TABELAS.html" target="_blank">CRIAR TABELAS</a> 
