--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </head>
 
 <h1>EXERCICIO DE HTML</h1>
+<strong>
+<a href="CRIAR-TABELAS.html" target="_blank">CRIAR TABELAS</a> </strong>
 
-<a href="CRIAR-TABELAS.html" target="_blank">CRIAR TABELAS</a> 
-
- <p>             
+ <p> <strong>            
    <a href="CRIAR-LINKS.html" target="_blank">CRIAR LINKS</a> 
-</p>
+ </strong></p>
 
 <HTML>
    <BODY>
