--- a/PAGINA-GOOGLE.html
+++ b/PAGINA-GOOGLE.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google Clone</title>
+    <link rel="stylesheet" href="google.css">
+</head>
+<body>
+    <div class="container">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_92x30dp.png" alt="Google Logo" class="logo">
+        <form class="search-form">
+            <input type="text" class="search-input" placeholder="Pesquisar no Google ou digitar um URL">
+            <button type="submit" class="search-button">Pesquisar</button>
+            <button type="button" class="mic-button">🎤</button>
+        </form>
+        <div class="links">
+            <a href="#">Gmail</a>
+            <a href="#">Imagens</a>
+        </div>
+    </div>
+</body>
+</html>
 
