PAGINA-GOOGLE.html

--- a/PAGINA-GOOGLE.html
+++ b/PAGINA-GOOGLE.html
@@ -7,18 +7,30 @@
     <link rel="stylesheet" href="google.css">
 </head>
 <body>
-    <div class="container">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_light_color_92x30dp.png" alt="Google Logo" class="logo">
-        <form class="search-form">
-            <input type="text" class="search-input" placeholder="Pesquisar no Google ou digitar um URL">
-            <button type="submit" class="search-button">Pesquisar</button>
-            <button type="button" class="mic-button">🎤</button>
-        </form>
-        <div class="links">
-            <a href="#">Gmail</a>
-            <a href="#">Imagens</a>
-        </div>
+    <!-- Logo substituído por texto estilizado -->
+    <div class="logo">
+        <span>G</span><span>o</span><span>o</span><span>g</span><span>l</span><span>e</span>
+    </div>
+
+    <!-- Barra de busca com ícone -->
+    <div class="search-container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg" alt="Search Icon">
+        <input type="text" class="search-input" placeholder="Pesquisar Google ou digitar URL">
+    </div>
+
+    <!-- Botões de pesquisa -->
+    <div class="buttons">
+        <button class="button">Pesquisa Google</button>
+        <button class="button">Estou com sorte</button>
+    </div>
+
+    <!-- Rodapé simples com links -->
+    <div class="footer">
+        <a href="#">Sobre</a>
+        <a href="#">Publicidade</a>
+        <a href="#">Negócios</a>
+        <a href="#">Privacidade</a>
+        <a href="#">Termos</a>
     </div>
 </body>
 </html>
-
