PAGINA-FACEBOOK.html

--- a/PAGINA-FACEBOOK.html
+++ b/PAGINA-FACEBOOK.html
@@ -1,1 +1,48 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Facebook Clone</title>
+    <link rel="stylesheet" href="facebook.css">
+</head>
+<body>
+    <!-- Logo do Facebook -->
+    <div class="logo">facebook</div>
+
+    <!-- Mensagem de alerta -->
+    <div class="alert">
+        <span class="info-icon">i</span> Você deve se conectar para continuar.
+    </div>
+
+    <!-- Formulário de login -->
+    <div class="login-container">
+        <h2>Entrar no Facebook</h2>
+        <div class="alert-box">Você deve se conectar para continuar.</div>
+        
+        <form>
+            <input type="text" placeholder="Email ou telefone" required>
+            <input type="password" placeholder="Senha" required>
+            <button type="submit" class="login-button">Entrar</button>
+        </form>
+
+        <a href="#" class="forgot-password">Esqueceu a conta?</a>
+        <div class="or">ou</div>
+        <button class="create-account-button">Criar nova conta</button>
+    </div>
+
+    <!-- Rodapé com links -->
+    <footer>
+        <div class="languages">
+            Português (Brasil) · English (US) · Español · Français (France) · Italiano · Deutsch · हिन्दी · 中文(简体) · 日本語
+        </div>
+        <div class="footer-links">
+            Cadastre-se · Entrar · Messenger · Facebook Lite · Vídeos · Locais · Jogos · Marketplace · Meta Pay · Meta Store · 
+            Meta Quest · Meta AI · Instagram · Threads · Campanhas de arrecadação de fundos · Serviços · Central de Informações 
+            de Votação · Grupos · Sobre · Criar anúncio · Criar Página · Desenvolvedores · Carreiras · Privacidade · Cookies · 
+            Escolhas para anúncios · Termos · Ajuda
+        </div>
+    </footer>
+</body>
+</html>
