--- a/index.html
+++ b/index.html
@@ -69,3 +69,55 @@
  
 </BODY>
 </HTML>
+
+
+
+
+
+
+
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menu</title>
+    <style>
+        .dropdown {
+            position: relative;
+            display: inline-block;
+}
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+}
+        .dropdown:hover .dropdown-content {
+            display:flex;
+            flex-direction: column;
+            gap: 10px;
+}
+    </style>
+</head>
+<body>
+
+<div class="dropdown">
+    <button>Menu</button>
+    <div class="dropdown-content">
+        <b>CRIAR TABELAS</b>
+        <b>CRIAR LINKS</b>
+        <b>INSERIR-IMAGEM</b>
+      <b>CRIAR-FORMULARIOS</b>
+      <b>FORMATAÇÃO-TEXTUAL</b>
+      <b>LISTAS</b>
+      <b>PAGINA-GOOGLE</b>
+      <b>PAGINA-FACEBOOK</b>
+      <b>LANDING-PAGE</b>
+     
+    </div>
+</div>
+
+</body>
+</html>
