--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
 
 <div class="dropdown">
-    <button>Menu</button>
+  <strong><button>Menu</button></strong> 
     <div class="dropdown-content">
         <b><strong>
 <a href="CRIAR-TABELAS.html" target="_blank">CRIAR TABELAS</a> </strong></b>
