--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <h3><title>Menu</title></h3>
     <style>
         .dropdown {
             position: relative;
