--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 }
         .dropdown:hover .dropdown-content {
             display:flex;
-            flex-direction: row;
+            flex-direction: colunm;
             gap: 100px;
 }
     </style>
